# lidar_camera_fusion

lidar_camera_fusion/: CMakeLists.txt  package.xml
lidar_camera_fusion/config/: ls32_190301_1  velodyne190301_1
lidar_camera_fusion/launch/: lidar_camera_fusion.launch
lidar_camera_fusion/src/: main.cpp
